--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -50,3 +50,6 @@
 <%= javascript_pack_tag "map" %>
 
 <%= javascript_pack_tag "event-show" %>
+<% if params[:redirect_success] == "true" %>
+  <%= javascript_pack_tag "sweet-alert" %>
+<% end %>
