--- a/app/views/tickets/_add_ticket.html.erb
+++ b/app/views/tickets/_add_ticket.html.erb
@@ -9,7 +9,7 @@
        <%= t.input :price, placeholder: '£', label: 'Price'%>
       </div>
       <div class="form-100">
-       <%= t.input :photo, as: :file, class: 'font-size-smaller' %>
+       <%= t.input :photo, as: :file, label: 'Upload ticket', class: 'font-size-smaller' %>
       </div>
       <div class="form-100">
        <%= t.input :description, label: 'Description'%>
