--- a/app/views/tickets/new.html.erb
+++ b/app/views/tickets/new.html.erb
@@ -56,7 +56,7 @@
           </div>
 
           <div class="event-price" style='text-align: center; padding: 0;'>
-            <p class='sell-ticket-font'>Sell ticket</p>
+            <p class='sell-ticket-font'>Sell</p>
             <%= link_to "#", data: {toggle: "modal", target: "#event-modal-#{event.id}"}  do %>
             <i class="fas fa-plus-circle fa-2x"></i>
             <% end %>
