--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -40,6 +40,18 @@
     text-decoration: none;
   }
 }
+@media (max-width: 768px) {
+  .banner-content h1 {
+    font-size: 56px;
+  }
+  h2 {
+    font-size: 24px;
+    margin: 5px 10px;
+  }
+}
+@media (max-width: 768px) {
+
+}
 
 .banner p {
   font-size: 36px;
@@ -93,8 +105,7 @@
 
 }
 @media (max-width: 923px) {
-  .banner-venue{
-  }
+
 }
 
 @media (max-width: 767px) {
