--- a/app/views/tickets/create.js.erb
+++ b/app/views/tickets/create.js.erb
@@ -1,5 +1,5 @@
 <% if @ticket.persisted? %>
-  window.location = "<%= event_url(@event.id) %>";
+  window.location = "<%= event_url(@event.id, redirect_success: true) %>";
 <% else %>
   document.getElementById("event-modal-<%= @ticket.event.id %>").innerHTML =
     "<%= j render 'add_ticket', event: @ticket.event, ticket: @ticket %>";
