--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -20,7 +20,7 @@
       </div>
 
       <div class="form-50-log-in">
-        <div class="log-in-button-sing-up">
+        <div class="log-in-button-sign-up">
         <%= render "devise/shared/links" %>
       </div>
     </div>
