--- a/app/assets/stylesheets/pages/_sign-up.scss
+++ b/app/assets/stylesheets/pages/_sign-up.scss
@@ -54,8 +54,8 @@ body{
   padding: 15px 0 20px 20px;
 }
 
-.log-in-button-sing-up{
-  .padding-left: 10px;
+.log-in-button-sign-up{
+  padding-left: 60px !important;
 }
 
 .help-block{
