--- a/app/views/pages/_dashboard_nav.html.erb
+++ b/app/views/pages/_dashboard_nav.html.erb
@@ -76,7 +76,7 @@
           <%= link_to "Buy Tickets", events_path, class: "navbar-wagon-item navbar-wagon-link" %>
         </li>
         <li>
-          <%= link_to "Sell Tickets", new_ticket_path, class: "navbar-wagon-item navbar-wagon-link" %>
+          <%= link_to "Sell Tickets", new_ticket_path, class: "navbar-wagon-item1 navbar-wagon-link" %>
         </li>
         <% if user_signed_in? %>
         <li>
