--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -64,7 +64,7 @@
     <% else %>
       <!-- Login link (when logged out) -->
       <%= link_to "Buy tickets", events_path, class: "navbar-wagon-item navbar-wagon-link" %>
-       <%= link_to "Sell Tickets", new_ticket_path, class: "navbar-wagon-item navbar-wagon-link" %>
+       <%= link_to "Sell Tickets", new_ticket_path, class: "navbar-wagon-item1 navbar-wagon-link" %>
       <%= link_to t(".sign_in", default: "Login"), new_user_session_path, class: "navbar-wagon-item navbar-wagon-link" %>
     <% end %>
   </div>
@@ -76,7 +76,8 @@
       <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
       <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu" id="mobile-drop-down">
         <li>
-          <%= link_to "Sell Tickets", new_ticket_path, class: "navbar-wagon-item navbar-wagon-link" %>
+          <%= link_to "Buy tickets", events_path, class: "navbar-wagon-item navbar-wagon-link" %>
+          <%= link_to "Sell Tickets", new_ticket_path, class: "navbar-wagon-item1 navbar-wagon-link" %>
         </li>
         <% if user_signed_in? %>
          <li>
