--- a/app/assets/stylesheets/components/_search.scss
+++ b/app/assets/stylesheets/components/_search.scss
@@ -15,7 +15,7 @@
 }
 .home-search {
   background-color: $light-gray;
-  padding: 100px;
+  padding: 100px 40px;
   margin-top: 25px;
   .search-form {
     display: inline-flex;
