--- a/app/assets/stylesheets/pages/_shared.scss
+++ b/app/assets/stylesheets/pages/_shared.scss
@@ -1,10 +1,16 @@
-html {
-  width: 100%;
-}
-// // body {
-// //   padding-top: 60px; /*50px for the height of the navbar + 37px for the offset*/
-// // }
-// .add-navbar-padding {
-//   padding-top: 60px;
+// html {
+//   width: 100%;
 // }
+
+// body {
+//   top: 0;
+//   position: relative;
+// }
+
+// adjust body for navbar
+// body {
+//   top: 60px;
+//   position: relative;
+// }
+
 
