--- a/app/views/pages/ticket_file.html.erb
+++ b/app/views/pages/ticket_file.html.erb
@@ -3,8 +3,11 @@
 <div class="ticket-file">
   <% ext = File.extname(params[:photo]) %>
   <% params[:photo].gsub!(ext, '.jpg')%>
-  <%= cl_image_tag params[:photo], crop: :fill %>
+  <%= cl_image_tag params[:photo], width: 800, height: 1000, crop: :fill %>
 </div>
 <div class="download-button">
   <a href="<%= params[:photo]  %>" class ="fas fa-cloud-download-alt fa-2x" download > Download </a>
 </div>
+
+
+
