--- a/app/assets/stylesheets/components/_ticket_listings.scss
+++ b/app/assets/stylesheets/components/_ticket_listings.scss
@@ -222,7 +222,7 @@
 }
 .display-flex{
   display: flex;
-  justify-content: space-around;
+  align-items: start;
 }
 .fa-calendar-alt:before{
   padding: 15px;
