--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -44,7 +44,10 @@
           <div class="event-description">
             <div class="event-description-container">
               <div class="event-link-to-show-page">
-                <%= link_to event.name, event_path(event.id) %>
+                <div class="display-flex">
+                <p><%= link_to event.name, event_path(event.id) %> </p>
+                <p class = 'event-category-box'><%= event.category %></p>
+                </div>
               </div>
               <div class="event-details">
                 <%= event.address %>
