--- a/app/views/pages/_dashboard-listings.html.erb
+++ b/app/views/pages/_dashboard-listings.html.erb
@@ -33,7 +33,9 @@
               <div class="dashboard-description">
                 <div class="dashboard-description-container">
                   <div class="dashboard-link-to-show-page">
+                    <%= link_to event_path(ticket.event_id) do  %>
                     <p><%= ticket.event.name %> @ <%= ticket.event.address %></p>
+                    <% end %>
                   </div>
                   <div class="dashboard-details">
                     <p><%= ticket.description %></p>
