home page style, dashboard style

--- a/app/assets/stylesheets/components/_dashboard_listings.scss
+++ b/app/assets/stylesheets/components/_dashboard_listings.scss
@@ -213,6 +213,8 @@
 .view-text-ticket{
   text-decoration: none;
   color: $green;
+  padding-left: 12px;
+  padding-top: 5px;
   &:hover{
     text-decoration: none;
     opacity: 0.9;
@@ -248,6 +250,10 @@ button{
   p {
     margin-top: 30px;
   }
+}
+
+.ticket-event-address-text{
+    font-size: 14px;
 }
 
 
