--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -31,3 +31,34 @@ $yellow: #F7CD63;
 $red: #FD2E2E;
 $orange: #E67E22;
 $white: rgb(255,255,255);
+
+.green{
+  color: #54BB94;
+}
+.lightslategrey{
+  color: lightslategrey;
+}
+.lightseagreen{
+  color: lightseagreen;
+}
+.palevioletred{
+  color: palevioletred;
+}
+.cadetblue {
+  color: cadetblue;
+}
+.peru {
+  color: peru;
+}
+.coral {
+  color: coral;
+}
+.darkturquoise{
+  color: darkturquoise;
+}
+.darkred {
+  color: darkred;
+}
+.indianred {
+  color: indianred;
+}
