--- a/app/views/events/_ticket_row.html.erb
+++ b/app/views/events/_ticket_row.html.erb
@@ -12,7 +12,7 @@
 
           <div class="ticket-description" style='padding-top: 0;'>
             <div class="event-description-container">
-              <div class="event-link-to-show-page">
+              <div class="event-link-to-show-page green">
                 <%= ticket.event.name %>
               </div>
               <div class="ticket-details">
