added money rails gem and added pricing

--- a/app/views/events/_list_form.html.erb
+++ b/app/views/events/_list_form.html.erb
@@ -37,7 +37,7 @@
 
       <%= e.simple_fields_for :ticket do |t| %>
       <div class="form-30">
-        <%= t.input :price, placeholder: '£', label: 'Price', required: true %>
+        <%= t.input :pricing, placeholder: '£', label: 'Price', required: true %>
       </div>
     </div>
 
