--- a/app/views/pages/_dashboard-watching.html.erb
+++ b/app/views/pages/_dashboard-watching.html.erb
@@ -53,7 +53,7 @@
                 <div class=" price">
                   <% ticket_price_array = [] %>
                   <% watch.event.tickets.each do |ticket| %>
-                  <% ticket_price_array << ticket.price %>
+                  <% ticket_price_array << ticket.pricing %>
                   <% end %>
                   <% if ticket_price_array.count >= 1 && watch.event.quantity > 0 %>
                   £<strong><%= ticket_price_array.min %></strong>
