--- a/app/views/pages/_dashboard-listings.html.erb
+++ b/app/views/pages/_dashboard-listings.html.erb
@@ -48,7 +48,7 @@
                   Listed at
                 </div>
                 <div class="price">
-                  <p>£<%= ticket.price %></p>
+                  <p><%= humanized_money_with_symbol(ticket.pricing) %></p>
                 </div>
                 <%= link_to '', ticket_no_display_path(ticket.id), method: 'post', class: "fas fa-trash-alt", data: {confirm: "Remove from Dashboard? This will not delete your ticket listing"} %>
 
