--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,6 @@
 // Specific CSS for your home-page
+.display-flex-space-between{
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
