--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -23,10 +23,13 @@
               <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 event-card-padding">
                 <%= link_to event_path(event.id) do %>
                   <div class="home-event-cards" style="background-image: url(<%= cl_image_path category_picture(event.category), crop: :fill; %>)">
-                    <p class='event-date-padding'><strong><%= event.date_and_time.strftime('%d %b') %></strong></p>
+                    <div class="display-flex-space-between">
+                      <p class='event-date-padding'><strong><%= event.date_and_time.strftime('%d %b') %></strong></p>
+                      <p class="<%= colour_filter(event.category) %>" style='font-weight:bold; margin: 5px; text-shadow: 0.5px 0.5px black;'><%= event.category %></p>
+                    </div>
                   </div>
                   <div class="event-card-content ">
-                    <p style='margin-top: 0;'><%= event.name %></p>
+                    <p><%= event.name %></p>
                     <p><i class="fas fa-map-marker-alt lightslategrey" style='padding-right:10px;'></i><%= event.city %></p>
                   </div>
                 <% end %>
