--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -31,8 +31,8 @@
                     </div>
                   </div>
                   <div class="event-card-content ">
-                    <p><%= event.name %></p>
-                    <p><i class="fas fa-map-marker-alt lightslategrey" style='padding-right:10px;'></i><%= event.city %></p>
+                    <p class='darkslategrey'><%= event.name.capitalize %></p>
+                    <p class='lightslategrey'><i class="fas fa-map-marker-alt lightslategrey" style='padding-right:10px;'></i><%= event.city %></p>
                   </div>
                 <% end %>
               </div>
