fix lowest price

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -78,7 +78,9 @@
           <div class="price">
             <% ticket_price_array = [] %>
             <% event.tickets.each do |ticket| %>
-              <% ticket_price_array << ticket.pricing %>
+              <% if ticket.sold == false  %>
+                <% ticket_price_array << ticket.pricing %>
+              <% end %>
             <% end %>
             <% if ticket_price_array.count >= 1 && event.quantity > 0 %>
             <strong>£<%= ticket_price_array.min %></strong>
