--- a/app/views/events/_list_form.html.erb
+++ b/app/views/events/_list_form.html.erb
@@ -36,7 +36,7 @@
       </div>
 
 
-      <%= e.simple_fields_for :tickets do |t| %>
+      <%= e.simple_fields_for :ticket do |t| %>
       <div class="form-30">
         <%= t.input :pricing, placeholder: '£', label: 'Price', required: true %>
       </div>
