--- a/app/views/tickets/_edit_form.html.erb
+++ b/app/views/tickets/_edit_form.html.erb
@@ -3,7 +3,7 @@
 
   <div class="sign-up-container">
     <div class="sign-up-text-container">
-      <h2 class='sign-up-text'>Upload a Profile Pic</h2>
+      <h2 class='sign-up-text'> Please upload a profile pic to sell tickets </h2>
     </div>
     <div class="form-inputs">
       <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
