--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -2,22 +2,21 @@
   background-color: $white;
 }
 
-.banner {
+.banner-content-container {
   color: white;
   text-align: center;
   height: calc(100vh - 60px);
   background-size: cover !important;
-  .banner-content-container {
-    display: flex;
-    justify-content: center;
-    // align-items: center;
-    padding-top: 100px;
-    width: 100%;
-    height: 100%;
-  }
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  min-height: 500px;
 }
 
 .banner-content {
+  padding-top: 60px;
+
   #banner-typed-text, .typed-cursor {
     font-size: 36px;
     font-family: $headers-font;
@@ -29,17 +28,43 @@
   margin-bottom: 60px;
   // text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
   }
-  a, a:hover {
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 0;
+  .fas, .fas:hover {
     height: 80px;
     font-size: 48px;
     z-index: 1;
     text-decoration: none;
   }
+  .buy-sell-btn {
+    display: flex;
+    justify-content: center;
+    padding: 50px 0 100px 0;
+    a {
+      border-radius: 20px;
+      font-size: 24px;
+      padding: 10px 20px;
+      margin: 0 20px;
+      font-weight: bold;
+      &:hover {
+        text-decoration: none;
+        transition: all .1s ease-in-out;
+        -ms-transform: scale(1.05);
+        -webkit-transform: scale(1.05);
+        transform: scale(1.05);
+      }
+    }
+    .green-black {
+      background-color: $green;
+      color: $black;
+      border: 1px solid $black;
+    }
+    .black-green {
+      background-color: $navbar-gray;
+      color: $green;
+      border: 1px solid $green;
+    }
+  }
 }
+
 @media (max-width: 768px) {
   .banner-content h1 {
     font-size: 56px;
