--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,14 +1,16 @@
 <!-- <div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.5) 50%), url('https://images.unsplash.com/photo-1429962714451-bb934ecdc4ec?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=b5ecaef0464fc50a866e74a6176c3fdc&auto=format&fit=crop&w=1650&q=80');"> -->
 <div class="home-page">
-  <div class="banner" style="background-image: linear-gradient(-180deg, rgba(38,38,38,1)5%, rgba(255,255,255,0) 100%), url('https://images.unsplash.com/photo-1483101974978-cf266fdf1139?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=250711afae03c79108409b3e0fa17862&auto=format&fit=crop&w=2389&q=80');">
-    <div class="banner-content-container">
-      <div class="banner-content">
-        <h1>UniTixHub</h1>
-        <h2>Buy and Sell tickets. Exclusively for Uni Students.</h2>
-        <span id="banner-typed-text"></span>
-        <div>
-          <%= link_to '', '#home-content', class: "fas fa-chevron-down" %>
-        </div>
+  <div class="banner-content-container banner" style="background-image: linear-gradient(-180deg, rgba(38,38,38,1)5%, rgba(255,255,255,0) 100%), url('https://images.unsplash.com/photo-1483101974978-cf266fdf1139?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=250711afae03c79108409b3e0fa17862&auto=format&fit=crop&w=2389&q=80');">
+    <div class="banner-content">
+      <h1>UniTixHub</h1>
+      <h2>Buy and Sell tickets. Exclusively for Uni Students.</h2>
+      <span id="banner-typed-text"></span>
+      <div class="buy-sell-btn">
+        <%= link_to 'Buy Tickets', events_path, class: "green-black" %>
+        <%= link_to 'Sell Tickets', new_ticket_path, class: "black-green" %>
+      </div>
+      <div>
+        <%= link_to '', '#home-content', class: "fas fa-chevron-down" %>
       </div>
     </div>
   </div>
