--- a/app/views/tickets/create.js.erb
+++ b/app/views/tickets/create.js.erb
@@ -1,5 +1,9 @@
 <% if @ticket.persisted? %>
-  <%= puts event_url(@event.id) %>
+  <%= puts event_path(@event.id) %>
+  <%= puts event_url(@event.id, redirect_success: true) %>
+
+  console.log(window.location)
+
 
   window.location = "<%= event_url(@event.id)%>";
 <% else %>
