--- a/app/views/events/_ticket_row.html.erb
+++ b/app/views/events/_ticket_row.html.erb
@@ -10,7 +10,7 @@
             </div>
           </div>
 
-          <div class="ticket-description" style='padding-top: 0;'>
+          <div class="ticket-description">
             <div class="event-description-container">
               <div class="event-link-to-show-page green">
                 <%= ticket.event.name %>
