--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,7 @@
     <div class="banner-content">
       <h1>UniTixHub</h1>
       <h2>Buy and Sell tickets. Exclusively for Uni Students.</h2>
-      <span id="banner-typed-text"></span>
+      <span id="banner-typed-text" class="typed-text"></span>
       <div class="buy-sell-btn">
         <%= link_to 'Buy Tickets', events_path, class: "green-black" %>
         <%= link_to 'Sell Tickets', new_ticket_path, class: "black-green" %>
