--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -109,7 +109,4 @@
 
 <%= javascript_pack_tag "event-index" %>
 <%= javascript_pack_tag "ticket-search" %>
-
-
-
-
+<%= javascript_pack_tag "active-button-buy" %>
