--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -13,5 +13,4 @@
  <%= javascript_include_tag "https://maps.googleapis.com/maps/api/js?libraries=places&key=#{ENV['GOOGLE_API_BROWSER_KEY']}" %>
  <%= javascript_pack_tag "form" %>
 
-
-
+<%= javascript_pack_tag "active-button-sell" %>
