--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -48,3 +48,5 @@
 <% if params[:redirect_success] == "true" %>
   <%= javascript_pack_tag "sweet-alert" %>
 <% end %>
+
+<%= javascript_pack_tag "active-button-buy" %>
