--- a/app/views/tickets/new.html.erb
+++ b/app/views/tickets/new.html.erb
@@ -78,3 +78,10 @@
 
       <%= javascript_pack_tag "ticket-search" %>
 
+<script>
+const active_button = document.getElementById("sell");
+
+active_button.setAttribute("id","active-navbar-button");
+
+</script>
+
