--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -33,7 +33,7 @@
                     </div>
                   </div>
                   <div class="event-card-content ">
-                    <p class='darkslategrey'><%= event.name.capitalize %></p>
+                    <p class='darkslategrey'><%= event.name.upcase %></p>
                     <p class='lightslategrey'><i class="fas fa-map-marker-alt lightslategrey" style='padding-right:10px;'></i><%= event.city %></p>
                   </div>
                 <% end %>
