--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -54,6 +54,7 @@
   margin: 0px 0px;
   border-radius: 5px 5px 0 0;
   box-shadow: 10px 15px 40px 0 rgba(0,0,0,0.1);
+  height: 100px;
 
 }
 .event-card-content {
