--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -53,7 +53,7 @@
           <div class="row">
             <% @cities.each do |city| %>
               <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
-                <%= link_to events_path(search_city: city) do %>
+                <%= link_to events_path(search: city) do %>
                   <div class="home-location-cards" style="background-image: linear-gradient(-250deg, rgba(0,0,0,0.4) 31%, rgba(0,0,0,0.1) 85%), url(<%= cl_image_path city_picture(city), crop: :fill; %>)"><%= city %>
                   </div>
                 <% end %>
