--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -35,17 +35,17 @@ $white: rgb(255,255,255);
 .green{
   color: #54BB94;
 }
-.lightslategrey{
-  color: lightslategrey;
+.brown{
+  color: #45171D;
 }
 .lightseagreen{
   color: lightseagreen;
 }
-.palevioletred{
-  color: palevioletred;
+.orangered{
+  color: #BB0029;
 }
-.cadetblue {
-  color: cadetblue;
+.purple {
+  color: #1B5A7A;
 }
 .peru {
   color: peru;
@@ -54,7 +54,7 @@ $white: rgb(255,255,255);
   color: coral;
 }
 .darkturquoise{
-  color: darkturquoise;
+  color: #0245A3;
 }
 .darkred {
   color: darkred;
@@ -65,8 +65,8 @@ $white: rgb(255,255,255);
 .aliceblue {
   color: aliceblue;
 }
-.lawngreen {
-  color: lawngreen;
+.purpleblue {
+  color: #6A65D8;
 }
 .deeppink {
   color: deeppink;
